Renaming files in client Add image functionality Add artist to the song Separate song duration in separate class
